update UI, add login, 404 page
Big Update for UI

--- a/secapp/templates/partials/_eventlog.html
+++ b/secapp/templates/partials/_eventlog.html
@@ -5,12 +5,12 @@
     <div class="card-body">
         <button type="button" class="btn btn-primary" id="run-log-collector-btn" data-bs-toggle="button"
             autocomplete="off">
-            Start Log Collector <span id="run-log-collector-icon"></span>
+            Run Script <span id="run-log-collector-icon"></span>
         </button>
 
         <button type="button" class="btn btn-primary" id="stop-log-collector-btn" data-bs-toggle="button"
             autocomplete="off">
-            Stop Log Collector <span id="stop-log-collector-icon"></span>
+            Stop Script <span id="stop-log-collector-icon"></span>
         </button>
 
         <button type="button" class="btn btn-primary" id="clear-event-logs-btn" data-bs-toggle="button"
