--- a/secapp/templates/settings.html
+++ b/secapp/templates/settings.html
@@ -19,6 +19,8 @@ Settings
     </script> 
     {% endcomment %}
 
+    {% include 'partials/_addevent.html' %}
+
     <!-- IPController -->
     {% include 'partials/_ipcontroller.html' %}
 
