--- a/secapp/templates/partials/_sidebar.html
+++ b/secapp/templates/partials/_sidebar.html
@@ -29,14 +29,18 @@
 
             <!-- <a href="/databreach" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Data Breach</a> -->
 
+             
+
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
-                        class="far fa-file-alt me-2"></i>Login</a>
+                        class="far fa-file-alt me-2"></i>Event Descripton</a>
                 <div class="dropdown-menu bg-transparent border-0">
-                    <a href="/admin/" class="dropdown-item">Sign In</a>
-                    <a href="/admin/" class="dropdown-item">Sign Up</a>
+                    <a href="/add_event/" class="dropdown-item">Add Event</a>
+                    <a href="/add_event/" class="dropdown-item">Update Event</a>
                 </div>
             </div> 
+
+            {% comment %}
 
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="fa fa-laptop me-2"></i>Elements</a>
@@ -45,7 +49,10 @@
                     <a href="typography.html" class="dropdown-item">Typography</a>
                     <a href="element.html" class="dropdown-item">Other Elements</a>
                 </div>
-            </div>
+            </div> 
+
+            {% endcomment %}
+            
         </div>
     </nav>
 </div>
