--- a/secapp/templates/eventlog.html
+++ b/secapp/templates/eventlog.html
@@ -12,7 +12,7 @@ Event Logs
     <div class="row g-4">
         <div class="container-fluid">
             <h1 class="">Event Logs</h1>
-            <table class="table table-dark table-striped">
+            <table class="table table-dark table-striped table-hover">
                 <thead>
                     <tr>
                         <th>Event ID</th>
@@ -26,50 +26,51 @@ Event Logs
                 </thead>
                 <tbody id="eventTableBody">
                     {% for event in event_logs %}
-                    <tr>
-                        <td>{{ event.EventID }}</td>
-                        <td>{{ event.SourceName }}</td>
-                        <td>{{ event.Level }}</td>
-                        <td>{{ event.Channel }}</td>
-                        <td>{{ event.PredictedValue }}
-                            <span class="badge {% if event.PredictedValue == 0 %}bg-success{% elif event.PredictedValue >= 1 and event.PredictedValue <= 3 %}bg-warning{% elif event.PredictedValue >= 4 and event.PredictedValue <= 5 %}bg-danger{% endif %}">
-                                {% if event.PredictedValue == 0 %}Safe{% elif event.PredictedValue >= 1 and event.PredictedValue <= 3 %}Warning{% elif event.PredictedValue >= 4 and event.PredictedValue <= 5 %}Danger{% endif %}
-                            </span>
-                        </td>
-                        <td>{{ event.TimeGenerated }}</td>
-                        <td>
-                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" 
-                                    data-bs-target="#eventModal{{ event.EventID }}" data-eventid="{{ event.EventID }}" data-predictedvalue="{{ event.PredictedValue }}">
-                                Details
-                            </button>
-                        </td>
-                    </tr>
-
-                    <!-- Modal for each event -->
-                    <div class="modal fade" id="eventModal{{ event.EventID }}" tabindex="-1" aria-labelledby="eventModalLabel{{ event.EventID }}" aria-hidden="true">
-                        <div class="modal-dialog modal-lg">
-                            <div class="modal-content bg-white">
-                                <div class="modal-header">
-                                    <h5 class="modal-title text-dark" id="eventModalLabel{{ event.EventID }}">Event Details (ID: {{ event.EventID }})</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
-                                <div class="modal-body text-dark">
-                                    <p><strong>Event ID:</strong> {{ event.EventID }}</p>
-                                    <p><strong>Source Name:</strong> {{ event.SourceName }}</p>
-                                    <p><strong>Predicted Value:</strong> <span id="predictedValue{{ event.EventID }}"></span></p>
-                                    <p><strong>Level:</strong> {{ event.Level }}</p>
-                                    <p><strong>Channel:</strong> {{ event.Channel }}</p>
-                                    <p><strong>Time Generated:</strong> {{ event.TimeGenerated }}</p>
-                                    <p style="word-wrap: break-word;"><strong>Description:</strong> {{ event.description }}</p>
-                                    <p style="word-wrap: break-word;"><strong>Message:</strong> {{ event.Message }}</p>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <tr>
+                            <td>{{ event.EventID }}</td>
+                            <td>{{ event.SourceName }}</td>
+                            <td>{{ event.Level }}</td>
+                            <td>{{ event.Channel }}</td>
+                            <td>{{ event.PredictedValue }}
+                                <span class="badge {% if event.PredictedValue == 0 %}bg-success{% elif event.PredictedValue >= 1 and event.PredictedValue <= 3 %}bg-warning{% elif event.PredictedValue >= 4 and event.PredictedValue <= 5 %}bg-danger{% endif %}">
+                                    {% if event.PredictedValue == 0 %}Safe{% elif event.PredictedValue >= 1 and event.PredictedValue <= 3 %}Warning{% elif event.PredictedValue >= 4 and event.PredictedValue <= 5 %}Danger{% endif %}
+                                </span>
+                            </td>
+                            <td>{{ event.TimeGenerated }}</td>
+                            <td>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" 
+                                        data-bs-target="#eventModal{{ event.EventID }}" data-eventid="{{ event.EventID }}">
+                                    Details
+                                </button>
+                            </td>
+                        </tr>
+                
+                        <!-- Modal for each event -->
+                        <div class="modal fade" id="eventModal{{ event.EventID }}" tabindex="-1" aria-labelledby="eventModalLabel{{ event.EventID }}" aria-hidden="true">
+                            <div class="modal-dialog modal-lg">
+                                <div class="modal-content bg-white">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title text-dark" id="eventModalLabel{{ event.EventID }}">Event Details (ID: {{ event.EventID }})</h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body text-dark">
+                                        <p><strong>Event ID:</strong> {{ event.EventID }}</p>
+                                        <p><strong>External Link:</strong> <a href="https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid={{ event.EventID }}" target="_blank">Event Details</a></p>
+                                        <p><strong>Source Name:</strong> {{ event.SourceName }}</p>
+                                        {% comment %} <p><strong>Predicted Value:</strong> <span id="predictedValue{{ event.EventID }}"></span></p> {% endcomment %}
+                                        <p><strong>Level:</strong> {{ event.Level }}</p>
+                                        <p><strong>Channel:</strong> {{ event.Channel }}</p>
+                                        <p><strong>Time Generated:</strong> {{ event.TimeGenerated }}</p>
+                                        <p style="word-wrap: break-word;"><strong>Description:</strong> {{ event.description }}</p>
+                                        <p style="word-wrap: break-word;"><strong>Message:</strong> {{ event.Message }}</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <!-- Modal End -->
+                        <!-- Modal End -->
                     {% endfor %}
                 </tbody>
             </table>
@@ -77,19 +78,126 @@ Event Logs
     </div>
 </div>
 
+
+<!-- Include Bootstrap JS and jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+{% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script> {% endcomment %}
+{% comment %} Sciprt disabled {% endcomment %}
 
 <script>
-    $(document).ready(function() {
-        // Details butonlarına tıklandığında çalışacak fonksiyon
-        $('button[data-bs-toggle="modal"]').click(function() {
-            const eventId = $(this).data('eventid');
-            const predictedValue = $(this).data('predictedvalue');
+    $(document).ready(function () {
+        // Function to show event details in modal
+        function showEventDetails(event) {
+            let details = "";
+            for (let key in event) {
+                details += `${key}: ${event[key]}\n`;
+            }
+            $('#eventDetails').text(details);
+            var myModal = new bootstrap.Modal(document.getElementById('eventModal'));
+            myModal.show();
 
-            // Predicted Value değerini modal içinde güncelle
-            $(`#predictedValue${eventId}`).text(predictedValue);
+            // Bu fonksiyon modal içeriğini zaten yukarıda doldurduk
+            var myModal = new bootstrap.Modal(document.getElementById('eventModal'+eventId));
+            myModal.show();
+        }
+
+        // Update table with data from server
+        function updateTable() {
+            fetch('/get-event-logs/')
+                .then(response => {
+                    console.log('Response received');  // This line is new
+                    if (!response.ok) {
+                        throw new Error(`HTTP error! status: ${response.status}`);
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    let tableBody = $('#eventTableBody');
+                    tableBody.empty();  // Clear the table before updating
+                    data.sort((a, b) => b.PredictedValue - a.PredictedValue);  // Sort by PredictedValue
+        
+                    data.forEach(event => {
+                        let row = $('<tr></tr>');
+        
+                        let eventLink = `https://www.ultimatewindowssecurity.com/securitylog/encyclopedia/event.aspx?eventid=${event.EventID}`;
+                        row.append($('<td></td>').html(`<a href="${eventLink}" target="_blank">${event.EventID}</a>`));
+                        row.append($('<td></td>').text(event.SourceName));
+                        row.append($('<td></td>').text(event.Level));
+                        row.append($('<td></td>').text(event.Channel));
+        
+                        let badgeClass = event.PredictedValue == 0 ? 'bg-success' :
+                            (event.PredictedValue >= 1 && event.PredictedValue <= 3) ? 'bg-warning' :
+                                (event.PredictedValue >= 4 && event.PredictedValue <= 5) ? 'bg-danger' : '';
+                        let badgeText = event.PredictedValue == 0 ? 'Safe' :
+                            (event.PredictedValue >= 1 && event.PredictedValue <= 3) ? 'Warning' :
+                                (event.PredictedValue >= 4 && event.PredictedValue <= 5) ? 'Danger' : '';
+                        row.append($('<td></td>').html(`${event.PredictedValue} <span class="badge ${badgeClass}">${badgeText}</span>`));
+        
+                        row.append($('<td></td>').text(event.TimeGenerated));
+        
+                        let actionCell = $('<td></td>');
+                        // Modal'ı açmak için buton ekleme
+                        let detailsButton = $('<button></button>')
+                            .addClass('btn btn-primary')
+                            .text('Details')
+                            .attr('data-bs-toggle', 'modal')
+                            .attr('data-bs-target', `#eventModal${event.EventID}`) // Butonun hedefleyeceği Modal ID'sini event.EventID ile dinamik olarak belirleme
+                            .on('click', function () {
+                                const eventId = event.EventID;
+                                showEventDetails(eventId); // Fonksiyon çağrısını burada yap
+                            });
+        
+                        actionCell.append(detailsButton);
+                        row.append(actionCell);
+                        tableBody.append(row);
+                    });
+        
+                    // Modal içinde verileri doldurma
+                    data.forEach(event => {
+                        let description = eventDescriptions[event.EventID] || "Not found description.";
+                        let details = "";
+                        for (let key in event) {
+                            details += `${key}: ${event[key]}\n`;
+                        }
+                        details += `Description: ${description}\n`;
+                        $(`#eventDetails${event.EventID}`).text(details); // event.EventID ile eşleşen modalın içeriğini doldurma
+                    });
+                })
+                .catch(error => {
+                    console.error('Fetch Error:', error);
+                    //  alert('An error occurred while fetching the data. Please try again.');
+                });
+        }
+
+        updateTable();
+        setInterval(updateTable, 5000);
+
+
+        // Fix for padding-right and body overflow issues
+        $('#eventModal').on('shown.bs.modal', function () {
+            $('body').css('padding-right', '0');
         });
+
+        $('#eventModal').on('hidden.bs.modal', function () {
+            $('body').css('padding-right', '');
+            $('body').css('overflow', 'auto');
+            $(".modal-backdrop").remove();
+        });
+        
     });
 </script>
+
+<!-- Optional CSS Fixes -->
+<style>
+    body.modal-open {
+        overflow-y: auto;
+        padding-right: 0 !important;
+    }
+
+    /* Ensure modal backdrop is removed properly */
+    {% comment %} .modal-backdrop {
+        display: none;
+    } {% endcomment %}
+</style>
 
 {% endblock %}
