--- a/secapp/templates/todo.html
+++ b/secapp/templates/todo.html
@@ -9,7 +9,7 @@ Task List
 <div class="container-fluid pt-4 px-4"> 
     <form id="addItemForm" class="mb-3">
         <div class="input-group">
-            <input type="text" class="form-control bg-white" placeholder="What do you need to do today?" id="itemInput">
+            <input type="text" class="form-control bg-white" placeholder="What do you need to do today?" id="itemInput" required>
             <div class="input-group-append">
                 <button class="btn btn-primary" type="submit" id="addButton">Add</button>
             </div>
