--- a/secapp/templates/search.html
+++ b/secapp/templates/search.html
@@ -8,47 +8,80 @@ Search on Google
 
 <div class="container-fluid pt-4 px-4">
     <h1 class="text-start">Google Dork Search</h1>
+    
     <div class="form-group mt-2">
         <label for="inputText">Search Text:</label>
         <div class="input-group">
-            <span class="input-group-text"><i class="bi bi-search fs-4"></i></span>
-            <input type="text" class="form-control border-color mt-1" id="inputText"
-                placeholder="Enter search text here...">
+            <span class="input-group-text">
+                <i class="bi bi-search fs-4" style="vertical-align: middle;"></i>
+            </span>
+            <input type="text" class="form-control bg-white mt-1" id="inputText" placeholder="Enter search text here...">
         </div>
     </div>
+
     <div class="form-group mt-2">
         <label for="fileType">File Type:</label>
-        <select class="form-control  mt-1" id="fileType">
-            <option value="">Select File Type</option>
-            <option value="pdf">PDF (pdf)</option>
-            <option value="ppt">PowerPoint (ppt)</option>
-            <option value="pptx">PowerPoint (pptx)</option>
-            <option value="doc">Word (doc)</option>
-            <option value="docx">Word (docx)</option>
-            <option value="xls">Excel (xls)</option>
-            <option value="xlsx">Excel (xlsx)</option>
-            <option value="txt">TXT (txt)</option>
-        </select>
+        <div class="input-group">
+            <span class="input-group-text">
+                <i class="bi bi-file-earmark-text fs-4" style="vertical-align: middle;"></i>
+            </span>
+            <select class="form-control mt-1" id="fileType">
+                <option value="">Select File Type</option>
+                <option value="pdf">
+                    <i class="bi bi-file-pdf"></i> PDF (pdf)
+                </option>
+                <option value="ppt">
+                    <i class="bi bi-file-powerpoint"></i> PowerPoint (ppt)
+                </option>
+                <option value="pptx">
+                    <i class="bi bi-file-powerpoint"></i> PowerPoint (pptx)
+                </option>
+                <option value="doc">
+                    <i class="bi bi-file-word"></i> Word (doc)
+                </option>
+                <option value="docx">
+                    <i class="bi bi-file-word"></i> Word (docx)
+                </option>
+                <option value="xls">
+                    <i class="bi bi-file-excel"></i> Excel (xls)
+                </option>
+                <option value="xlsx">
+                    <i class="bi bi-file-excel"></i> Excel (xlsx)
+                </option>
+                <option value="txt">
+                    <i class="bi bi-file-text"></i> TXT (txt)
+                </option>
+            </select>
+        </div>
     </div>
+
     <div class="form-group mt-2">
         <label for="site">Site:</label>
         <div class="input-group">
-            <span class="input-group-text"><i class="bi bi-globe fs-4"></i></span>
-            <input type="text" class="form-control border-color mt-1" id="site" placeholder="example.com">
+            <span class="input-group-text">
+                <i class="bi bi-globe fs-4" style="vertical-align: middle;"></i>
+            </span>
+            <input type="text" class="form-control bg-white mt-1" id="site" placeholder="example.com">
         </div>
     </div>
+
     <div class="form-group mt-2">
         <label for="intitle">In Title:</label>
         <div class="input-group">
-            <span class="input-group-text"><i class="bi bi-card-heading fs-4"></i></span>
-            <input type="text" class="form-control border-color mt-1" id="intitle" placeholder="Keywords in title">
+            <span class="input-group-text">
+                <i class="bi bi-card-heading fs-4" style="vertical-align: middle;"></i>
+            </span>
+            <input type="text" class="form-control bg-white mt-1" id="intitle" placeholder="Keywords in title">
         </div>
     </div>
+
     <div class="form-group mt-2">
         <label for="inurl">In URL:</label>
         <div class="input-group">
-            <span class="input-group-text"><i class="bi bi-link-45deg fs-4"></i></span>
-            <input type="text" class="form-control border-color mt-1" id="inurl" placeholder="Keywords in URL">
+            <span class="input-group-text">
+                <i class="bi bi-link-45deg fs-4" style="vertical-align: middle;"></i>
+            </span>
+            <input type="text" class="form-control bg-white mt-1" id="inurl" placeholder="Keywords in URL">
         </div>
     </div>
     <button onclick="performSearch()" class="btn btn-primary btn-block mt-2">Start Search</button>
